PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Fix psxc-symlink-maker not updating links when sorting by title when dest has changed.
		- Fix psxc-imdb parsing Directors with single quotes in their names correctly.
		- Fix psxc-imdb to parse all data again from pages now considered binary by certain grep-versions.
		- Change behaviour of use_partial_on_noforce to match strings in noforce_sfv_first_dirs with
		  any part of the path instead of the rightmost part.
		- Fix TVMaze plugin show_network showing incorrect result (thanks to ViP3R for noticing).
		- Fix %u_pid in SPEED* announces, add %currentdir for SPEED* and USER announces and %u_pid for USER announce.
		- Fix typos in TVMaze plugin (thanks to sam-lap for noticing)
		- Add TVMaze sitebot plugin, revamped TVRage plugin by MrCode.
		- ^--- 2016 ---^
		- Fix disabling of BADMSGINVITE announce.
		- Add explanation for vars in all triggers, WELCOME and (BAD)MSGINVITE
		- Add %color explanation and extra info for BNC_* announces
		- Add explanation for usable vars in FREE and FREE-DEV
		- Add announce for users with email as pass and using an incorrect one.
		- Add 44 extra genres defined by Winamp
		- Add announce for glftpd's new logline concerning logins with invalid usernames and adjust existing one for bad passwords.
		- Fix samplechecking for fileexts not being 3 chars long. Fix some memleaks and other bugs at the same time.
		- Fix incorrect bitrate (and other values) reported for .mp3 files (thanks to bizzyfunk for noticing)
		- Fix "-e" echo when compiling (patch by tittof)
		- Add sample_types option to be used instead of video_types to define those extensions present in sampledirs
		- Split del_completebar into as many equivalents as *_completebar
		- Add jpeg to allowed_types and 2015 to allowed_years
		- Make IRC-triggers configurable in ngBot: now you can easily disable a command
		  or add more triggers for it and eggdrop-perms can be set for them.